|               |                                           |                       | Frequency Based            |                |                 |               |
|               |                                           |                       | Standardized TF-IDF        |                |                 |               |
| Priyam        |      Semantic Feature Engineering         |  Logistic Regression  | BM25F                      |       87%      |       78%       |     DONE      |
|               |                                           |                       | BM25 Plus                  |                |                 |               |
|               |                                           |                       | Skip Gram                  |                |                 |               |
|               |                                           |                       | Positional N Gram          |                |                 |               |
---------------------------------------------------------------------------------------------------------------------------------------------------------------------
|               |                                           |                       | POS-Tag Patterns           |                |                 |               |
|               |                                           |                       | Dependency Relationships   |                |                 |               |
|               |                                           |                       | Parse Tree Features        |                |                 |               |
| Subhas        |       Syntactic Feature Engineering       |  Gaussian Naive Bayes | Phrase Structures          |      82%       |       79%       |     DONE      |
|               |                                           |                       | Grammar Based Features     |                |                 |               |