@@ -1,43 +1,43 @@
 texts,true_labels,predicted_labels
-"This movie is speedy enough with plot twists, but hard to understand the connection between plots.",negative,positive
+"This movie is speedy enough with plot twists, but hard to understand the connection between plots.",negative,negative
 "Seriously, this is the best movie I've ever watched! Everything was flawless!",positive,positive
 "The storyline was okay, but the acting was just not up to the mark.",negative,negative
 A complete disaster of a movie. Don't waste your time.,negative,negative
 I can't believe how amazing this was. Totally worth it!,positive,positive
-"The movie had its moments, but overall, it felt like something was missing.",negative,positive
+"The movie had its moments, but overall, it felt like something was missing.",negative,negative
 "I absolutely loved the cinematography, but the acting was subpar.",negative,positive
 The film is an excellent example of how not to make a movie.,negative,positive
 It's hard to imagine how anyone could dislike this masterpiece!,positive,positive
-The trailer was better than the actual movie. Felt cheated.,negative,positive
+The trailer was better than the actual movie. Felt cheated.,negative,negative
 A rollercoaster of emotions! Highly recommend watching this.,positive,positive
 An average movie with nothing new to offer.,negative,negative
 "The pacing was terrible, and the climax was predictable.",negative,negative
 "Wow, just wow. This is how a movie should be made!",positive,positive
-"A decent watch for a lazy weekend. Not groundbreaking, but enjoyable.",positive,positive
-The director has outdone themselves; what a phenomenal movie!,positive,positive
-More hype than substance. A complete letdown.,negative,positive
+"A decent watch for a lazy weekend. Not groundbreaking, but enjoyable.",positive,negative
+The director has outdone themselves; what a phenomenal movie!,positive,negative
+More hype than substance. A complete letdown.,negative,negative
 "Good visuals, decent music, but lacked a solid script.",negative,negative
 A masterpiece in every sense. This will stay with me forever.,positive,positive
 Mediocre at best. Not worth the ticket price.,negative,positive
 A fresh take on a tired genre. Highly recommend it!,positive,positive
-Overrated and boring. Nothing special about it.,negative,negative
+Overrated and boring. Nothing special about it.,negative,positive
 This is one of those movies you'll regret missing. A must-watch!,positive,positive
 "Predictable plot, but the performances were top-notch.",positive,negative
 It's a bad movie if you're looking for entertainment.,negative,negative
 Can't believe I sat through the entire thing. A waste of time.,negative,negative
-"Finally, a movie that gets it right. Loved every minute of it!",positive,positive
-A forgettable movie with no real impact.,negative,positive
+"Finally, a movie that gets it right. Loved every minute of it!",positive,negative
+A forgettable movie with no real impact.,negative,negative
 An extraordinary journey that left me speechless. Bravo!,positive,positive
-"The humor was forced, and the dialogue was cringeworthy.",negative,positive
+"The humor was forced, and the dialogue was cringeworthy.",negative,negative
 A solid movie with a gripping narrative. Well done!,positive,positive
 "The music was fantastic, but the rest of the movie was average.",positive,positive
-Ironic how they managed to make something so beautiful look so bland.,negative,positive
+Ironic how they managed to make something so beautiful look so bland.,negative,negative
 An epic conclusion to a fantastic series. Couldn’t have been better!,positive,positive
 The movie tries too hard to be funny and fails miserably.,negative,negative
 A fresh and engaging story with relatable characters.,positive,positive
-"All style, no substance. Disappointing.",negative,positive
+"All style, no substance. Disappointing.",negative,negative
 A breath of fresh air! One of the best movies this year.,positive,positive
-"The plot was all over the place, but it was fun to watch.",positive,positive
+"The plot was all over the place, but it was fun to watch.",positive,negative
 Couldn't make it through the first half. Painful to sit through.,negative,negative
 An unexpectedly beautiful film that touched my heart.,positive,positive
 Trying to understand why this movie exists is more entertaining than the movie itself.,negative,positive
