@@ -40,10 +40,12 @@
 |               |                                           |                       | word2vec                   |                |                 |               |
 |               |                                           |                       | Frequency Based            |                |                 |               |
 |               |                                           |                       | Standardized TF-IDF        |                |                 |               |
-| Priyam        |      Semantic Feature Engineering         |  Logistic Regression  | BM25F                      |       87%      |       78%       |     DONE      |
-|               |                                           |                       | BM25 Plus                  |                |                 |               |
+|               |                                           |                       | BM25F                      |       88%      |       80%       |     DONE      |
+| Priyam        |       Semantic Feature Engineering        | Multilayer Perceptron | BM25 Plus                  |                |                 |               |
 |               |                                           |                       | Skip Gram                  |                |                 |               |
 |               |                                           |                       | Positional N Gram          |                |                 |               |
+|               |                                           |                       | Window Features            |                |                 |               |
+|               |                                           |                       | Trigram Contextual         |                |                 |               |
 ---------------------------------------------------------------------------------------------------------------------------------------------------------------------
 |               |                                           |                       | POS-Tag Patterns           |                |                 |               |
 |               |                                           |                       | Dependency Relationships   |                |                 |               |
